--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <title>ArkWallet</title>
 </head>
 <body>
+    <div class="overlay hidden">
+        <div class="modal  main__services_cart">
+            <h3 class="main__services_cart-title"></h3>
+            <p class="main__services_cart-text"></p>
+            <button class="main__services_cart-price"></button>
+        </div>
+    </div>
     <div class="wrapper">
         <header class="header">
             <a href="#" class="header__logo"></a>
@@ -25,41 +32,48 @@
 
         <main class="main">
             <h1 class="main__title">ВАШ БИЗНЕС БЕЗ СЛОЖНОСТЕЙ И ГРАНИЦ</h1>
-            <hr>
+            <hr class="main__title_hr">
             <p class="main__text">Мы берем на себя самые сложные задачи, связанные с регистрацией и релокацией бизнеса в любые точки мира. </p> <!-- Размер текста не совпадает с макетом. Не пойму почему-->
             <button class="main__button"> <!-- &darr; --></button> 
             <h2 class="main__subtitle">МЫ ПОМОГАЕМ</h2>
-            <p class="main__text main__text_long">компаниям любого размера и вида деятельности, в вопросах связанных с оптимизацией доходов и расходов. Открываем зарубежные бизнес-счета  и подключаем мерчантов под любые задачи, даже связанные с high-risk проектами. Мы знаем, как построить любую финансовую вертикаль,  и делаем это на 100% легально.</p><!-- Как подписать название класса? -->
+            <p class="main__text main__text_long">компаниям любого размера и вида деятельности, в вопросах связанных с оптимизацией доходов и расходов. Открываем зарубежные бизнес-счета  и подключаем мерчантов под любые задачи, даже связанные с high-risk проектами. Мы знаем, как построить любую финансовую вертикаль,  и делаем это на 100% легально.</p>
             
             <section class="main__services">
                 <div class="main__services_cart">
                     <h3 class="main__services_cart-title">РЕГИСТРАЦИЯ КОМПАНИИ ЛЮБОГО МАСШТАБА</h3>
+                    <p class="main__services_cart-text hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ut nemo dolorem sed natus magnam reprehenderit atque nostrum, ratione laboriosam iure totam. Ratione sequi voluptatum totam facilis officia, deserunt asperiores!</p>
                     <button class="main__services_cart-price">от €1500</button>
                 </div>
                 <div class="main__services_cart">
-                    <h3 class="main__services_cart-title">БИЗНЕС АККАУНТЫ ПО ВСЕМУ МИРУ </h3>
+                    <h3 class="main__services_cart-title">БИЗНЕС &mdash; АККАУНТЫ ПО ВСЕМУ МИРУ </h3>
+                    <p class="main__services_cart-text hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quam deleniti, doloribus labore consectetur, vero dolor accusantium molestiae rerum debitis in. Nihil ipsum dolorum, nobis accusamus enim odit soluta velit.</p>
                     <button class="main__services_cart-price">от €1000</button>
                 </div>
                 <div class="main__services_cart">
                     <h3 class="main__services_cart-title">ГОТОВЫЕ КОМПАНИИ ЗА РУБЕЖОМ</h3>
+                    <p class="main__services_cart-text hidden">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit fuga ipsam sint ex veritatis consectetur pariatur adipisci, odio aut? Possimus aliquid repudiandae architecto commodi repellat temporibus aperiam, sapiente ducimus officia!</p>
                     <button class="main__services_cart-price">от €2000</button>
                 </div>
                 <div class="main__services_cart">
                     <h3 class="main__services_cart-title">ПОДКЛЮЧЕНИЕ МЕРЧАНТОВ</h3>
+                    <p class="main__services_cart-text hidden">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut repellat, doloribus dolorum facere consectetur, officiis dolor molestiae assumenda error excepturi qui fugiat omnis ab ea nemo atque! Corporis, rerum fuga.</p>
                     <button class="main__services_cart-price">от €700</button>
                 </div>
                 <div class="main__services_cart">
                     <h3 class="main__services_cart-title">МАССОВЫЕ ВЫПЛАТЫ</h3>
+                    <p class="main__services_cart-text hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum temporibus, accusamus non aspernatur praesentium ipsum, mollitia repudiandae exercitationem obcaecati ipsam autem suscipit asperiores? Suscipit placeat maiores ex illum natus. Dolorum?</p>
                     <button class="main__services_cart-price">€1000</button>
                 </div>
                 <div class="main__services_cart">
-                    <h3 class="main__services_cart-title">БИЗНЕС
-                        УСЛУГИ ДЛЯ ФИНТЕХ
+                    <h3 class="main__services_cart-title">БИЗНЕС  <img src="/img/tireLong.svg" alt="&mdash;"> <!-- Не могу отстиливозать длинное тире, оно получается только короткое-->
+                        УСЛУГИ ДЛЯ ФИНТЕХ &mdash;
                         КОМПАНИЙ</h3>
+                    <p class="main__services_cart-text hidden">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae, laudantium ea! Earum fugiat necessitatibus aliquid libero quod, in officia eos minima! Perferendis in possimus reprehenderit eligendi, magni non. Praesentium, explicabo?</p>
                     <button class="main__services_cart-price">Цена договорная</button>
                 </div>
                 <div class="main__services_cart main__services_cart-item7">
                     <h3 class="main__services_cart-title">БУХГАЛТЕРСКОЕ СОПРОВОЖДЕНИЕ</h3>
+                    <p class="main__services_cart-text hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, sed perspiciatis? Tempora ab natus dolores, vitae eligendi deleniti cupiditate nam. Soluta qui vel corporis, aliquam hic debitis adipisci sed eos?</p>
                     <button class="main__services_cart-price">Цена договорная</button>
                 </div>
                 <div class="main__services_cart main__services_cart-consult">
