--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
     <link rel="stylesheet" href="/fonts/font/stylesheet.css">
     <link rel="stylesheet" href="/css/response1366px.css">
     <link rel="stylesheet" href="/css/response740px.css">
+    <link rel="stylesheet" href="/css/response320px.css">
     <title>ArkWallet</title>
 </head>
 
 <body>
+    </body>
+    <div class="backIMG">
     <div class="overlay hidden">
         <div class="modal  main__services_cart">
             <h3 class="main__services_cart-title"></h3>
@@ -34,7 +37,7 @@
         </header>
 
         <main class="main">
-            <h1 class="main__title">ВАШ БИЗНЕС БЕЗ СЛОЖНОСТЕЙ И ГРАНИЦ</h1>
+            <h1 class="main__title">ВАШ БИЗНЕС <br/> БЕЗ СЛОЖНОСТЕЙ <br/> И ГРАНИЦ</h1> <!-- Что-то размер текста не совпадает-->
             <hr class="main__title_hr">
             <p class="main__text">Мы берем на себя самые сложные задачи, связанные с регистрацией и релокацией бизнеса в
                 любые точки мира. </p> <!-- Размер текста не совпадает с макетом. Не пойму почему-->
@@ -49,7 +52,7 @@
                 <div class="main__services_cart">
                     <h3 class="main__services_cart-title">РЕГИСТРАЦИЯ КОМПАНИИ ЛЮБОГО МАСШТАБА</h3>
                     <div class="main__services_iconOpen"></div>
-                    <p class="main__services_cart-text hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    <p class="main__services_cart-text hidden_text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Repellendus ut nemo dolorem sed natus magnam reprehenderit atque nostrum, ratione laboriosam
                         iure totam. Ratione sequi voluptatum totam facilis officia, deserunt asperiores!</p>
                     <button class="main__services_cart-price">от €1500</button>
@@ -57,7 +60,7 @@
                 <div class="main__services_cart">
                     <h3 class="main__services_cart-title">БИЗНЕС &mdash; АККАУНТЫ ПО ВСЕМУ МИРУ </h3>
                     <div class="main__services_iconOpen"></div>
-                    <p class="main__services_cart-text hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    <p class="main__services_cart-text hidden_text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Explicabo quam deleniti, doloribus labore consectetur, vero dolor accusantium molestiae rerum
                         debitis in. Nihil ipsum dolorum, nobis accusamus enim odit soluta velit.</p>
                     <button class="main__services_cart-price">от €1000</button>
@@ -65,7 +68,7 @@
                 <div class="main__services_cart">
                     <h3 class="main__services_cart-title">ГОТОВЫЕ КОМПАНИИ ЗА РУБЕЖОМ</h3>
                     <div class="main__services_iconOpen"></div>
-                    <p class="main__services_cart-text hidden">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    <p class="main__services_cart-text hidden_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                         Suscipit fuga ipsam sint ex veritatis consectetur pariatur adipisci, odio aut? Possimus aliquid
                         repudiandae architecto commodi repellat temporibus aperiam, sapiente ducimus officia!</p>
                     <button class="main__services_cart-price">от €2000</button>
@@ -73,7 +76,7 @@
                 <div class="main__services_cart">
                     <h3 class="main__services_cart-title">ПОДКЛЮЧЕНИЕ МЕРЧАНТОВ</h3>
                     <div class="main__services_iconOpen"></div>
-                    <p class="main__services_cart-text hidden">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    <p class="main__services_cart-text hidden_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                         Ut repellat, doloribus dolorum facere consectetur, officiis dolor molestiae assumenda error
                         excepturi qui fugiat omnis ab ea nemo atque! Corporis, rerum fuga.</p>
                     <button class="main__services_cart-price">от €700</button>
@@ -81,7 +84,7 @@
                 <div class="main__services_cart">
                     <h3 class="main__services_cart-title">МАССОВЫЕ ВЫПЛАТЫ</h3>
                     <div class="main__services_iconOpen"></div>
-                    <p class="main__services_cart-text hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    <p class="main__services_cart-text hidden_text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Eum temporibus, accusamus non aspernatur praesentium ipsum, mollitia repudiandae exercitationem
                         obcaecati ipsam autem suscipit asperiores? Suscipit placeat maiores ex illum natus. Dolorum?</p>
                     <button class="main__services_cart-price">€1000</button>
@@ -92,7 +95,7 @@
                         УСЛУГИ ДЛЯ ФИНТЕХ <span class="dash">&mdash;&mdash;</span>
                         КОМПАНИЙ</h3>
                         <div class="main__services_iconOpen"></div>
-                    <p class="main__services_cart-text hidden">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    <p class="main__services_cart-text hidden_text">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                         Beatae, laudantium ea! Earum fugiat necessitatibus aliquid libero quod, in officia eos minima!
                         Perferendis in possimus reprehenderit eligendi, magni non. Praesentium, explicabo?</p>
                     <button class="main__services_cart-price">Цена договорная</button>
@@ -100,7 +103,7 @@
                 <div class="main__services_cart main__services_cart-item7">
                     <h3 class="main__services_cart-title">БУХГАЛТЕРСКОЕ СОПРОВОЖДЕНИЕ</h3>
                     <div class="main__services_iconOpen"></div>
-                    <p class="main__services_cart-text hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    <p class="main__services_cart-text hidden_text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Consequatur, sed perspiciatis? Tempora ab natus dolores, vitae eligendi deleniti cupiditate nam.
                         Soluta qui vel corporis, aliquam hic debitis adipisci sed eos?</p>
                     <button class="main__services_cart-price">Цена договорная</button>
@@ -124,15 +127,18 @@
                 <h5 class="main__exploreWork_numeration">2</h5>
                 <p class="main__exploreWork_text">Мы свяжемся с вами как можно скорее, чтобы уточнить все детали и
                     предложить наиболее оптимальное и эффективное решение. </p>
-                <h5 class="main__exploreWork_numeration">3</h5>
-                <p class="main__exploreWork_text">Наша команда предоставит вам несколько возможных решений на выбор и
-                    детали партнерства. Вам останется только предоставить необходимые документы и произвести все
-                    необходимые платежи.</p>
+                <div class="container-absolute">
+                    <h5 class="main__exploreWork_numeration">3</h5>
+                    <p class="main__exploreWork_text">Наша команда предоставит вам несколько возможных решений на выбор и
+                        детали партнерства. Вам останется только предоставить необходимые документы и произвести все
+                        необходимые платежи.</p>
+
+                </div>
                 <h5 class="main__exploreWork_numeration">4</h5>
                 <p class="main__exploreWork_text">Мы работаем так, чтобы сотрудничество с нашими партнерами оставалось
                     взаимовыгодным, продуктивным и долгосрочным. Именно поэтому большинство партнеров остаются с нами на
                     долгие годы.</p>
-            </section> <!-- Не могу сдалать на 740 px что бы третий элемент был слева -->
+            </section> 
             
             <section class="main__discussion">
                 <h4 class="main__discussion_title">ВАША ПРИВАТНОСТЬ ПРЕВЫШЕ ВСЕГО </h4>
@@ -142,7 +148,7 @@
                     вашему запросу.
                 </p>
                 <button class="main__discussion_button">Начать обсуждение</button>
-            </section>
+            </section> 
             <section class="main__aboutUs">
                 <h4 class="main__aboutUs_title">ПОЧЕМУ МЫ?</h4>
                 <p class="main__aboutUs_text">Объединенные в интернациональные команды, наши сотрудники живут и работают
@@ -162,26 +168,31 @@
                     нами задачи, мы создали множество эффективных методов открытия нового бизнеса и работы с финансами с
                     наименьшими потерями денег и времени.
                 </p>
-            </section>
+            </section> 
             <article class="main__promise">
                 МЫ ГАРАНТИРУЕМ
                 <div class="main__promise_title">
                     <p>//&nbsp;ЛУЧШЕЕ РЕШЕНИЕ ДЛЯ ВАШИХ ЗАДАЧ</p>
                     <p>//&nbsp;КОНКУРЕНТНЫЕ ЦЕНЫ НА НАШИ УСЛУГИ</p>
-                    <p>//&nbsp;ВЫСОКИЙ УРОВЕНЬ КОНФИДЕНЦИАЛЬНОСТИ</p>
+                    <p>//&nbsp;ВЫСОКИЙ УРОВЕНЬ КОНФИДЕНЦИАЛЬНОСТИ</p>       <!-- Не понятно как внутри сделать отступ-->
                     <p>//&nbsp;ОПЕРАТИВНЫЙ ОТВЕТ</p>                    
-                </div> 
+                </div>  
             </article>
             <section class="main__qustionForm">
                 <form action="#" class="main__qustionForm_form">
                     <div class="main__qustionForm_container-top">
                         <div class="main__qustionForm_container-left">
-                            <input type="text" placeholder="Ваше имя *" name="name" class="main__qustionForm_form-input">
-
-                            <input type="text" placeholder="Почта или Telegram *" name="contact" class="main__qustionForm_form-input">
-
-                            <textarea class="main__qustionForm_form-textAria" name="question"
-                                placeholder="Опишите ваш задачу или задайте вопрос"></textarea>
+                            <div>
+                                <input type="text" placeholder="Ваше имя *" minlength="2" maxlength="20" name="name" pattern="^[A-Za-zА-Яа-я+\s+]+$" class="main__qustionForm_form-input form__inp" required>   <!-- required  делает импут обязательным доля заполнения -->
+                                <p class="form__error" data-error-length="Имя должно содержать от 2 до 20 символов" data-error-pattern="Разрешаются кирилица, латиница и пробелы"></p>
+                            </div>
+                            <div>
+                                <input type="text" placeholder="Почта или Telegram *"pattern="^[\w+]+@[\w+].+$" name="contact" class="main__qustionForm_form-input form__inp" required>
+                                <p class="form__error" data-error-pattern="Нет символа @"></p>
+                            </div>
+                            <textarea minlength="10" maxlength="100" class="main__qustionForm_form-textAria form__inp" name="question"
+                                placeholder="Опишите ваш задачу или задайте вопрос" required></textarea>
+                            <p class="form__error" data-error-length="Это сообщение должно содержать от 10 до 100 символов"></p>
                         </div>
                         <div class="main__qustionForm_container-right">
                             <p class="main__qustionForm_text">Отвечаем в течение одного рабочего дня. Обсудим ваши
@@ -197,7 +208,7 @@
                         </div>
                     </div>
                     <div class="main__qustionForm_container-bottom">
-                        <button class="main__qustionForm_form-button">Отправить</button>
+                        <button disabled class="main__qustionForm_form-button">Отправить</button>
 
                         <p class="main__qustionForm_form-text">Нажимая кнопку "Отправить" вы соглашаетесь с нашей
                             <a class="main__qustionForm_form-a" href="#">Политикой данных</a>
@@ -206,8 +217,8 @@
                 </form>
             </section>
         </main>
-
     </div>
+</div>
     <footer class="footer">
         <div class="footer__wrapper">
             <div class="footer__logo">
@@ -222,7 +233,7 @@
             </div>
         </div>
     </footer>
-    <script src="/js/script.js"></script>
+    <script type="module" src="/js/script.js"></script>
 </body>
 
 </html>
